Simplify lint configuration

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,108 +1,9 @@
 linters:
-  enable-all: true
+  presets:
+    - bugs
+    - sql
+    - unused
   disable:
-    - cyclop
-    - deadcode
-    - depguard
-    - exhaustivestruct
-    - exhaustruct
-    - forbidigo
-    - funlen
-    - gci
-    - gochecknoglobals
-    - gocognit
-    - gocritic
-    - gocyclo
-    - godox
-    - goerr113
-    - gofmt
-    - gofumpt
-    - golint
-    - gomnd
-    - goprintffuncname
+    - exhaustive
     - gosec
-    - ifshort
-    - interfacer
-    - lll
-    - maligned
-    - nakedret
-    - nestif
-    - nlreturn
     - noctx
-    - nonamedreturns
-    - nosnakecase
-    - paralleltest
-    - perfsprint
-    - prealloc
-    - scopelint
-    - structcheck
-    - varcheck
-    - varnamelen
-    - wrapcheck
-    - wsl
-
-linters-settings:
-  revive:
-    rules:
-      # ————————————————————————————————————————————————————————————————————————————————————————————
-      # golint
-      # ————————————————————————————————————————————————————————————————————————————————————————————
-      - name: context-as-argument
-      - name: context-keys-type
-      - name: dot-imports
-      - name: error-naming
-      - name: error-return
-      - name: errorf
-      - name: exported
-      - name: increment-decrement
-      - name: package-comments
-      - name: range
-      - name: time-naming
-      - name: unexported-return
-      - name: var-declaration
-      # ————————————————————————————————————————————————————————————————————————————————————————————
-      # extras
-      # ————————————————————————————————————————————————————————————————————————————————————————————
-      - name: atomic
-      - name: bool-literal-in-expr
-      - name: call-to-gc
-      - name: confusing-results
-      - name: constant-logical-expr
-      - name: defer
-      - name: duplicated-imports
-      - name: empty-block
-      - name: empty-lines
-      - name: error-strings
-      - name: get-return
-      - name: identical-branches
-      - name: if-return
-      - name: imports-blacklist
-      - name: modifies-parameter
-      - name: modifies-value-receiver
-      - name: nested-structs
-      - name: range-val-address
-      - name: range-val-in-closure
-      - name: redefines-builtin-id
-      - name: string-format
-      - name: string-of-int
-      - name: struct-tag
-      - name: unconditional-recursion
-      - name: unexported-naming
-      - name: unreachable-code
-      - name: unused-parameter
-      - name: unused-receiver
-      - name: useless-break
-      - name: waitgroup-by-value
-      # ————————————————————————————————————————————————————————————————————————————————————————————
-      # disabled
-      # ————————————————————————————————————————————————————————————————————————————————————————————
-      - name: receiver-naming
-        disabled: true
-      - name: indent-error-flow
-        disabled: true
-      - name: blank-imports
-        disabled: true
-
-  stylecheck:
-    checks:
-      - '-ST1006'
